--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - lib/assets/images/products/supermarket_longneck.png
     - lib/assets/images/products/supermarket_monster.png
     - lib/assets/images/products/supermarket_12_pack.png
+    - lib/assets/images/scene/supermarket_address_map.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
