--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ flutter:
     - lib/assets/images/products/supermarket_monster.png
     - lib/assets/images/products/supermarket_12_pack.png
     - lib/assets/images/scene/supermarket_address_map.png
+    - lib/assets/images/scene/supermarket_visa_icon.png
+    - lib/assets/images/scene/supermarket_delivery.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
